{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 24,
  "lineage": "ca3789fc-37e1-ca9c-0f3e-35130d23e9af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:internet-gateway/igw-0512a97fb36778530",
            "id": "igw-0512a97fb36778530",
            "owner_id": "656928223951",
            "region": "us-east-1",
            "tags": {
              "Name": "flca-igw"
            },
            "tags_all": {
              "Name": "flca-igw"
            },
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "igw-0512a97fb36778530",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:route-table/rtb-031ea453605853899",
            "id": "rtb-031ea453605853899",
            "owner_id": "656928223951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-flca-route-table"
            },
            "tags_all": {
              "Name": "private-flca-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "rtb-031ea453605853899",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:route-table/rtb-063c091022e08d60a",
            "id": "rtb-063c091022e08d60a",
            "owner_id": "656928223951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0512a97fb36778530",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-flca-route-table"
            },
            "tags_all": {
              "Name": "public-flca-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "rtb-063c091022e08d60a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4f10ce0391e9133",
            "region": "us-east-1",
            "route_table_id": "rtb-031ea453605853899",
            "subnet_id": "subnet-0f0f0f3303c9ae8e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "rtbassoc-0a4f10ce0391e9133",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0be70f3f9e1a18",
            "region": "us-east-1",
            "route_table_id": "rtb-063c091022e08d60a",
            "subnet_id": "subnet-066c8017413ce7808"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "rtbassoc-01e0be70f3f9e1a18",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:security-group/sg-005a17cb34bdceba1",
            "description": "allow https from everywhere",
            "egress": [],
            "id": "sg-005a17cb34bdceba1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "656928223951",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "sg-005a17cb34bdceba1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:subnet/subnet-0f0f0f3303c9ae8e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f0f3303c9ae8e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656928223951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-flca"
            },
            "tags_all": {
              "Name": "private-subnet-flca"
            },
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "subnet-0f0f0f3303c9ae8e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:subnet/subnet-066c8017413ce7808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066c8017413ce7808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656928223951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-flca"
            },
            "tags_all": {
              "Name": "public-subnet-flca"
            },
            "vpc_id": "vpc-0a5601d573cdba9c3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "subnet-066c8017413ce7808",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flca",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:vpc/vpc-0a5601d573cdba9c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af4da8f62959012e",
            "default_route_table_id": "rtb-08fb4ad4d4c3f1f88",
            "default_security_group_id": "sg-0607f9a1756e85b08",
            "dhcp_options_id": "dopt-0eeb858ac8b70a0cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5601d573cdba9c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fb4ad4d4c3f1f88",
            "owner_id": "656928223951",
            "region": "us-east-1",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "vpc-0a5601d573cdba9c3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:security-group-rule/sgr-0c8621e4fdee895b3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c8621e4fdee895b3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-005a17cb34bdceba1",
            "security_group_rule_id": "sgr-0c8621e4fdee895b3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "sgr-0c8621e4fdee895b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_https",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:security-group-rule/sgr-0b217fa95f69b76e1",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0b217fa95f69b76e1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-005a17cb34bdceba1",
            "security_group_rule_id": "sgr-0b217fa95f69b76e1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "sgr-0b217fa95f69b76e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_https",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:security-group-rule/sgr-0765c9c0a2f53481c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0765c9c0a2f53481c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-005a17cb34bdceba1",
            "security_group_rule_id": "sgr-0765c9c0a2f53481c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "sgr-0765c9c0a2f53481c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_https",
            "aws_vpc.flca"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656928223951:security-group-rule/sgr-018e913bf038eb517",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-018e913bf038eb517",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-005a17cb34bdceba1",
            "security_group_rule_id": "sgr-018e913bf038eb517",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "656928223951",
            "id": "sgr-018e913bf038eb517",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_https",
            "aws_vpc.flca"
          ]
        }
      ]
    }
  ]
}